argocd/overlays/scaleway-parca-demo/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/part-of: argocd
spec:
  rules:
  - host: demo.parca.dev
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        path: /argo-cd
        pathType: Prefix
